swagger-auth implemented
